--- a/offers.html
+++ b/offers.html
@@ -147,11 +147,7 @@
         <section style="padding: 1rem 0; overflow: hidden;">
             <h1 class="section-title center"
                 style="text-align: center; font-family: 'Bebas Neue', cursive; letter-spacing: 1.5px; font-size: 2.8rem; margin: 0;">
-                Special Offers</h1>
-            <p class="center"
-                style="text-align: center; margin-bottom: 1rem; font-size: 1rem; font-family: 'Montserrat', sans-serif;">
-                Click to expand any offer
-            </p>
+                Checkout Our Offers</h1>
 
             <div class="marquee-viewport-horizontal">
                 <div id="scrollingTrack" class="marquee-track-horizontal">
