--- a/offers.html
+++ b/offers.html
@@ -147,7 +147,7 @@
         <section style="padding: 1rem 0; overflow: hidden;">
             <h1 class="section-title center"
                 style="text-align: center; font-family: 'Bebas Neue', cursive; letter-spacing: 1.5px; font-size: 2.8rem; margin: 0;">
-                Checkout Our Offers</h1>
+                Our Offers</h1>
 
             <div class="marquee-viewport-horizontal">
                 <div id="scrollingTrack" class="marquee-track-horizontal">
