--- a/offers.html
+++ b/offers.html
@@ -22,8 +22,8 @@
             cursor: pointer;
             position: relative;
             padding: 30px 0;
-            background: #f9f9f9;
-            /* Subtle background for the slider area */
+            /* Updated background to match your primary color */
+            background: var(--primary, #ffc107);
         }
 
         .marquee-track-horizontal {
@@ -42,17 +42,17 @@
             background: white;
             border-radius: 20px;
             margin: 0 1rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+            /* Added slightly stronger shadow for better contrast against yellow background */
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
             width: 600px;
             height: 400px;
-            /* Ensures images don't touch the very edges of the white box */
-            padding: 20px; 
+            padding: 20px;
             flex-shrink: 0;
             display: flex;
             align-items: center;
             justify-content: center;
             transition: transform 0.3s ease;
-            box-sizing: border-box; /* Ensures padding doesn't increase width */
+            box-sizing: border-box;
         }
 
         .offer-card:hover {
@@ -60,11 +60,10 @@
         }
 
         .offer-card img {
-            /* These three lines are the key to fitting the image inside the box */
+            /* Ensures image fills the box according to proportions without stretching */
             width: 100%;
             height: 100%;
-            object-fit: contain; 
-            
+            object-fit: contain;
             border-radius: 10px;
             display: block;
         }
@@ -114,7 +113,6 @@
             .offer-card {
                 width: 85vw;
                 height: 300px;
-                /* Shorter height for mobile screens */
                 margin: 0 0.5rem;
             }
 
